# WorldEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  WorldEngine.sln  WorldEngine.vcxproj  WorldEngine.vcxproj.filters  imgui.ini
SLN BKUP/: WorldEngine.vcxproj  WorldEngine.vcxproj.filters
res/meshes/: bunny.mesh
res/shaders/: main.frag  main.frag.spv  main.frag.spv.dep  main.vert  main.vert.spv  main.vert.spv.dep
res/shaders/common/: common.glsl  pbr.glsl  structures.glsl
res/shaders/compute/: compute_BRDFIntegrationMap.glsl  compute_BRDFIntegrationMap.glsl.spv  compute_BRDFIntegrationMap.glsl.spv.dep  compute_diffuseIrradiance.glsl  compute_diffuseIrradiance.glsl.spv  compute_diffuseIrradiance.glsl.spv.dep  compute_equirectangular.glsl  compute_equirectangular.glsl.spv  compute_equirectangular.glsl.spv.dep  compute_gaussianBlur.glsl  compute_gaussianBlur.glsl.spv  compute_gaussianBlur.glsl.spv.dep  compute_prefilterEnvMap.glsl  compute_prefilterEnvMap.glsl.spv  compute_prefilterEnvMap.glsl.spv.dep
res/shaders/debug/: debug_lines.frag  debug_lines.vert
res/shaders/deferred/: lighting.frag  lighting.frag.spv  lighting.frag.spv.dep
res/shaders/histogram/: histogram.frag  histogram.frag.spv  histogram.glsl  histogram.vert  histogram.vert.spv  histogram_accumulate_compute.glsl  histogram_accumulate_compute.glsl.dep  histogram_accumulate_compute.glsl.spv  histogram_accumulate_compute.glsl.spv.dep  histogram_average_compute.glsl  histogram_average_compute.glsl.spv  histogram_average_compute.glsl.spv.dep  histogram_clear_compute.glsl  histogram_clear_compute.glsl.spv  histogram_clear_compute.glsl.spv.dep  histogram_vtx_scatter.frag  histogram_vtx_scatter.frag.spv  histogram_vtx_scatter.vert  histogram_vtx_scatter.vert.spv
res/shaders/postprocess/: bloomBlur.frag  bloomBlur.frag.spv  bloomBlur.frag.spv.dep  downsample.frag  downsample.frag.spv  postprocess.frag  postprocess.frag.spv  postprocess.frag.spv.dep  reprojection.frag  reprojection.frag.spv  reprojection.frag.spv.dep  upsample.frag  upsample.frag.spv
res/shaders/scene/: entities.frag  entities.frag.spv  entities.vert  entities.vert.spv  terrain.frag  terrain.frag.spv  terrain.vert  terrain.vert.spv  terrain_common.glsl
res/shaders/screen/: fullscreen_quad.vert  fullscreen_quad.vert.spv  fullscreen_quad.vert.spv.dep
res/shaders/shadow/: shadow.frag  shadow.frag.spv  shadow.frag.spv.dep  shadow.vert  shadow.vert.spv  shadow.vert.spv.dep  shadow_terrain.vert
res/shaders/terrain/: compute_terrainTileHeightRange.glsl  compute_terrainTileHeightRange.glsl.spv
res/shaders/util/: compute_equirectangular.glsl  compute_equirectangular.glsl.spv
src/: UniformBuffer.cpp  UniformBuffer.h  main.cpp
src/core/: Application.cpp  Application.h  Vulkan.cpp  Vulkan.h  core.h  hash.h  volk.c  volk.h
src/core/application/: Application.cpp  Application.h  Engine.cpp  Engine.h  InputHandler.cpp  InputHandler.h
src/core/engine/: Camera.cpp  Camera.h  ConfigManager.h
src/core/engine/event/: ApplicationEvents.cpp  ApplicationEvents.h  EventDispatcher.cpp  EventDispatcher.h  GraphicsEvents.cpp  GraphicsEvents.h
src/core/engine/geometry/: MeshData.cpp  MeshData.h
src/core/engine/physics/: PhysicsSystem.cpp  PhysicsSystem.h  RigidBody.cpp  RigidBody.h
src/core/engine/renderer/: DebugRenderer.cpp  DebugRenderer.h  DeferredRenderer.cpp  DeferredRenderer.h  EnvironmentMap.cpp  EnvironmentMap.h  ImmediateRenderer.cpp  ImmediateRenderer.h  LightComponent.cpp  LightComponent.h  Material.cpp  Material.h  RenderCamera.cpp  RenderCamera.h  RenderComponent.cpp  RenderComponent.h  RenderLight.cpp  RenderLight.h  RenderProperties.cpp  RenderProperties.h  SceneRenderer.cpp  SceneRenderer.h  ShadowMap.cpp  ShadowMap.h  TerrainRenderer.cpp  TerrainRenderer.h
src/core/engine/renderer/light/: Light.cpp  Light.h
src/core/engine/renderer/renderPasses/: DeferredRenderer.cpp  DeferredRenderer.h  ExposureHistogram.cpp  ExposureHistogram.h  HistogramRenderer.cpp  HistogramRenderer.h  LightRenderer.cpp  LightRenderer.h  PostProcessRenderer.cpp  PostProcessRenderer.h  ReprojectionRenderer.cpp  ReprojectionRenderer.h  UIRenderer.cpp  UIRenderer.h
src/core/engine/scene/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  EntityHierarchy.cpp  EntityHierarchy.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  WorldTransform.cpp  WorldTransform.h
src/core/engine/scene/bound/: BoundingVolume.cpp  BoundingVolume.h  Frustum.cpp  Frustum.h  Intersection.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Visibility.h
src/core/engine/scene/event/: EventDispacher.cpp  EventDispacher.h  Events.h  (+2 more)
src/core/engine/ui/: PerformanceGraphUI.cpp  PerformanceGraphUI.h  UI.cpp  UI.h
src/core/graphics/: Buffer.cpp  Buffer.h  BufferView.cpp  BufferView.h  CommandPool.cpp  CommandPool.h  ComputePipeline.cpp  ComputePipeline.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSet_.cpp  DescriptorSet_.h  DeviceMemory.cpp  DeviceMemory.h  Fence.cpp  Fence.h  FrameResource.cpp  FrameResource.h  Framebuffer.cpp  Framebuffer.h  GPUMemory.cpp  GPUMemory.h  GraphicsManager.cpp  GraphicsManager.h  GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsResource.cpp  GraphicsResource.h  Image.cpp  Image.h  Image2D.cpp  Image2D.h  ImageCube.cpp  ImageCube.h  ImageData.cpp  ImageData.h  ImageView.cpp  ImageView.h  Mesh.cpp  Mesh.h  (+12 more)
src/core/imgui/: imgui_demo.cpp  imgui_impl_vulkan.cpp
src/core/thread/: Scheduler.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  ThreadUtils.cpp  ThreadUtils.h  WorkerThread.cpp  WorkerThread.h
src/core/util/: DebugUtils.cpp  DebugUtils.h  DenseFlagArray.cpp  DenseFlagArray.h  EntityChangeTracker.cpp  EntityChangeTracker.h  Exception.cpp  Exception.h  Float16.cpp  Float16.h  IdManager.cpp  IdManager.h  Logger.cpp  Logger.h  PlatformUtils.cpp  PlatformUtils.h  Profiler.cpp  Profiler.h  TaskQueue.cpp  TaskQueue.h  Time.cpp  Time.h  Util.cpp  Util.h  wsque.hpp
src/demo/: BloomTestApplication.cpp  BloomTestApplication.h  RenderStressTestApplication.cpp  RenderStressTestApplication.h  TerrainTestApplication.cpp  TerrainTestApplication.h
(+14 files in other folders)
